--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,7 @@ database
 .pnp.*
 
 **/.env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
